@@ -52,3 +52,8 @@
 
 03-27-2023 :
     - New home page with topic separators and "scroll to bottom" button
+
+0-30-2023 :
+    - Added "Software" topic
+    - Articles can now have more than one topic
+    - Color of article box tags now changes when hovering to better convey that it is a link
